trunk/Archive2/4a/0db36cbebd4851/output
main.cpp:14:26: error: duplicate explicit instantiation of 'void f7(T) [with T = int]' [-fpermissive]
 template void f7<int>(int);
                          ^
